--- a/Minimo/Minimo/stylee.css
+++ b/Minimo/Minimo/stylee.css
@@ -7,7 +7,7 @@
 }
 
 a {
-  text-decoration: none;
+  text-decoration: none !important;
   color: black;
 }
 
@@ -102,10 +102,14 @@ header {
   text-transform: uppercase;
   letter-spacing: 7px;
   position: absolute;
-  font-size: 18px;
-  right: calc(50% - 48px);
-  top: calc(50% - 9px);
+  font-size: 26px;
+  right: calc(50% - 60px);
+  top: calc(50% - 13.5px);
   z-index: 1;
+}
+
+.brand:hover {
+  color:rgba(226, 26, 26, 0.986)
 }
 
 nav {
@@ -151,10 +155,7 @@ header li a {
   width: 100%;
   height: 25px;
   cursor: pointer;
-}
-
-header li a:hover {
-  background-color: #b4ad9e;
+  transition: color 0.4s;
 }
 
 header li:nth-child(2),
@@ -169,6 +170,8 @@ header button {
   width: auto;
   z-index: 1;
   position: relative;
+  top: 2px;
+  font-size: 22px;
 }
 
 main {
@@ -323,6 +326,35 @@ footer p, footer a {
   color: black !important;
 }
 
+#topup {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  position: fixed;
+  right: 7%;
+  bottom: 5%;
+  font-size: 20px;
+  background-color: black;
+  opacity: 0.4;
+  cursor: pointer;
+  color: white;
+}
+@media only screen and (min-width: 430px) {
+  .form-container {
+    width: 400px;
+  }
+
+  .terms, .social {
+    display: flex;
+    justify-content: center;
+    flex-flow: row nowrap;
+    align-items: baseline;
+  }
+}
+
 @media only screen and (min-width: 870px) {
   h3, .photodiary a {
     font-size: 14px;
@@ -386,6 +418,10 @@ footer p, footer a {
     width: auto;
     height: 25px;
     border: none;
+  }
+
+  header a:hover {
+    color: rgba(238, 11, 11, 0.986);
   }
 
   header button {
@@ -525,12 +561,6 @@ footer p, footer a {
     height: 99px;
   }
   
-  .terms, .social {
-    display: flex;
-    justify-content: center;
-    align-items: baseline;
-  }
-  
   .terms a {
     display: block;
     margin-right: 15px;
@@ -547,4 +577,11 @@ footer p, footer a {
   footer p, footer a {
     color: black !important;
   }
+
+  #topup {
+    width: 50px;
+    height: 50px;
+    font-size: 30px;
+  }
 }
+
