--- a/startup-demo/style.css
+++ b/startup-demo/style.css
@@ -1,3 +1,322 @@
+/* ---------- reset css ----------*/
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 a {
-  display: block;
+  text-decoration: none !important;
+  color: black;
+}
+
+ul {
+  list-style: none;
+}
+
+table {
+	border-collapse: collapse;
+  border-spacing: 0;
+}
+
+html {
+  scroll-behavior: smooth;
+  font-size: 62.5%;
+}
+
+body {
+  font-family:
+  -apple-system,
+  BlinkMacSystemFont,
+  "Segoe UI",
+  "Roboto",
+  "Helvetica Neue", Arial, sans-serif,
+  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: lato;
+  
+}
+
+img {
+  vertical-align: middle;
+  height: auto;
+  max-width: 100%;
+}
+
+
+/* ---------- kết thúc reset css ----------*/
+
+/*---fonts styles---*/
+
+menu a, 
+.header-apply,
+.member-text,
+.apply p:first-of-type,
+.process-text, 
+footer {
+  font-size: 11px;
+}
+
+.see-more,
+.news-title {
+  font-size: 16px;
+}
+
+.scroll-down, 
+.drag p:first-of-type {
+  font-size: 18px;
+}
+
+.description, 
+.vivamus, 
+.drag, 
+.header-logo, 
+.footer-logo {
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.wel-description, 
+.process-title, 
+.stats-text, 
+label {
+  font-size: 18px;
+}
+
+h1 {
+  font-size: 46px;
+  line-height: 50px;
+  color: #283583;
+  text-align: center;
+  font-weight: bold;
+}
+
+h2 {
+  font-size: 38px;
+  line-height: 32px;
+  color: #020202;
+  text-align: center;
+  margin-top: 85px !important;
+  margin-bottom: 25px !important;
+
+}
+
+.stats-num {
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 32px;
+  color: #ffffff;
+  text-align: center;
+  margin-bottom: 10px !important;
+}
+
+.author {
+  font-size: 12px;
+  color:#848484;
+}
+
+.page-container {
+  max-width: 100%;
+  padding: 15px 15px 0px 15px;
+}
+
+button {
+  border: none;
+  outline: none !important;
+  background-color: transparent;
+  font-size: 20px;
+}
+
+.page-container {
+  max-width: 1440px;
+}
+
+.big-container {
+  max-width: 1140px;
+}
+
+a {
+  display: block !important;
+}
+
+.see-more {
+  background-color: #283583;
+  border-radius: 15px;
+  color: #ffffff;
+  text-align: center;
+  transition: transform 0.5s;
+  margin-bottom: 0px !important;
+}
+
+.see-more:hover {
+  background-color: rgb(11, 29, 112);
+  color: white;
+  transform: scale(1.1);
+}
+
+.description {
+  width: 100%;
+  max-height: 140px;
+  overflow: hidden;
+  text-align: center;
+  margin-bottom: 35px !important;
+}
+
+/*-------header-------*/
+
+header {
+  position: relative;
+}
+
+.header-logo {
+  color: #EB5B49;
+  text-align: center;
+  margin-left: calc(50% - )
+}
+
+#sm-hidden {
+  display: none;
+  border: none !important;
+}
+
+.header-apply {
+  display: none;
+}
+
+.logo-button-container {
+  display: flex;
+  align-items: center;
+}
+
+.small {
+  margin-left: calc(50% - 17.5px - 35px);
+  width: 70px;
+}
+
+#menu {
+  width: 100%;
+  position: absolute;
+  top: 35px;
+  transition: visibility 0.5s, opacity 0.5s;
+  visibility: hidden;
+  opacity: 0;
+  background-color: #ffffff;
+}
+
+#menu ul {
+  border: 1px solid black;
+  border-bottom: none;
+  margin: 0;
+}
+
+#menu ul a {
+  text-align: center;
+  width: 100%;
+  border-bottom: 1px solid black;
+}
+
+.welcome {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  padding-bottom: 60px;
+}
+
+.wel-description {
+  text-align: center;
+}
+
+.welcome h1 {
+  margin: 30px 0px;
+}
+
+.welcome p:first-of-type {
+  margin-bottom: 30px;
+}
+
+.about {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+.about * {
+  margin-bottom: 50px;
+}
+
+.see-more {
+  width: 240px;
+}
+
+.team, .members {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+.member-info {
+  text-align: center;
+}
+
+.members:last-child {
+  margin-top: 50px;
+}
+
+.process-area {
+  display: flex;
+  justify-content: space-between;
+}
+
+.myrow {
+  width: calc(50% - 10px);
+}
+
+.process-items {
+  background: #FFFFFF;
+  box-shadow: 0px 4px 21px -5px rgba(97, 97, 97, 0.233752);
+  border-radius: 10px;
+  font-size: 10px;
+  max-width: 100%;
+}
+
+.stats {
+  margin-top: 85px;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  text-align: center;
+}
+
+.stats-items {
+  background: #EB5B49;
+  box-shadow: 0px 0px 20px -5px rgba(0, 0, 0, 0.185547);
+  border-radius: 10px;
+  padding: 10px;
+  margin-top: 20px;
+}
+
+.stats-items p {
+  margin-bottom: 0;
+  line-height: 25px;
+}
+
+.vivamus:last-of-type {
+  margin: 50px 0px 0px 0px;
+}
+
+.brands *{
+  margin-top: 15px;
+}
+
+.news {
+  margin-top: 85px;
+}
+
+.news-content-row {
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
+}
+.news-content-row img {
+  vertical-align: middle;
 }
